[package]
name = "embed-rust"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
path-slash = "0.2.1"
syn = "2.0.15"
quote = "1.0.26"
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }
sanitize-filename = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4.3"
