[package]
name = "embed-rust"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
description = "A macro that allows to embed a Rust executable."
repository = "https://github.com/Abestanis/embed-rust"

[lib]
proc-macro = true

[dependencies]
path-slash = "0.2.1"
syn = "2.0.15"
quote = "1.0.26"
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }
sanitize-filename = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4.3"
