[package]
name = "embed-rust"
version = "0.3.0"
edition = "2024"
license-file = "LICENSE"
description = "A macro that allows to embed a Rust executable."
repository = "https://github.com/Abestanis/embed-rust"

[lib]
proc-macro = true

[dependencies]
path-slash = "0.2.0"
syn = "2.0.0"
quote = "1.0.26"
proc-macro2 = "1.0.52"
sanitize-filename = "0.6.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
fs2 = "0.4.0"
